--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "unit": "karma start test/unit/karma.conf.js --single-run",
     "e2e": "node test/e2e/runner.js",
     "test": "npm run unit && npm run e2e",
-    "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
+    "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs",
+    "start": "node server.js"
   },
   "dependencies": {
     "body-parser": "^1.15.2",
+    "express": "^4.14.0",
     "ping": "^0.2.1",
     "ping-net": "0.0.1",
     "ping-wrapper2": "0.0.6",
