--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "body-parser": "^1.15.2",
+    "chart.js": "^2.3.0",
     "express": "^4.14.0",
     "ping": "^0.2.1",
     "ping-net": "0.0.1",
